up to commit point

--- a/main.tex
+++ b/main.tex
@@ -58,7 +58,8 @@
 % \input{Sections/time/time}
 % \input{Sections/imp_rpc/imp.tex}
 \chapter{Working with Distributed Systems}
-\input{Sections/snap/snap}
+% \input{Sections/snap/snap}
+\input{Sections/rep/rep}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
