--- a/Sections/high/high.tex
+++ b/Sections/high/high.tex
@@ -230,7 +230,7 @@ Distributed systems cover a vast and diverse range of applications, including:
 In todays market there are numerous applications of distributed systems, such as:
 Cloud Computing, Social Networks, E-commerce, Streaming Services, Search Engines, Renting Computation (AI training), etc.
 
-Let's begin to define the problem space. Say there be 
+Let's begin to define the problem space. Say there are 
 two individuals Alice and Bob, who wish to communicate:\\
 \begin{figure}[h]
     \centering
