clarification on RPC implementaiton

--- a/Sections/imp_rpc/imp.tex
+++ b/Sections/imp_rpc/imp.tex
@@ -217,7 +217,7 @@ package main; import "fmt"; import "log"; import "net"; import "net/rpc"
 
 \begin{Example}[Simple Local Arithmetic RPC (Part 3)]
 
-    Now to setup the client:
+    After the following client code, run the server first, then client on a separate terminals:
     \begin{lstlisting}[language=Go, numbers=none]
     package main; import "fmt"; import "log"; import "net/rpc"
     
