--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,7 @@
 \vfill
 \begin{center}
     \Large{Big thanks to \textbf{Professor Ioannis Liagouris}}\\
+    and \textbf{Dr. Anna Arpaci-Dusseau} 
     \normalsize 
     for teaching CS351: Distributed Systems\\
     at Boston University \cite{liagouris_cs351}.\\
@@ -51,15 +52,17 @@
     \chapter*{Prerequisites}
     \input{Sections/pre}
     
-\chapter{Introduction}
-\input{Sections/high/high}
-\input{Sections/rpc/rpc}
-\input{Sections/rpc_2/rpc_2}
-\input{Sections/time/time}
-\input{Sections/imp_rpc/imp.tex}
-\chapter{Working with Distributed Systems}
-\input{Sections/snap/snap}
+% \chapter{Introduction}
+% \input{Sections/high/high}
+% \input{Sections/rpc/rpc}
+% \input{Sections/rpc_2/rpc_2}
+% \input{Sections/time/time}
+% \input{Sections/imp_rpc/imp.tex}
+% \chapter{Working with Distributed Systems}
+% \input{Sections/snap/snap}
 \input{Sections/rep/rep}
+
+\input{Sections/raft/raft}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
