--- a/refs.bib
+++ b/refs.bib
@@ -5,3 +5,10 @@
   howpublished = {Lecture notes, Boston University, Spring Semester},
   note         = {Boston University, CS Department}
 }
+@misc{Arpaci_cs351,
+  author       = {Anna Arpaci-Dusseau},
+  title        = {CS351: Distributed Systems},
+  year         = {2025},
+  howpublished = {Lecture notes, Boston University, Spring Semester},
+  note         = {Boston University, CS Department}
+}
