--- a/Sections/snap/snap.tex
+++ b/Sections/snap/snap.tex
@@ -1,5 +1,6 @@
 \section{Saving System State: Snapshots}
 
+\label{sec:snap}
 This section discusses saving state. This is useful for fault-tolerance and system migrations.
 
 \begin{Def}[Snapshot]
