--- a/main.tex
+++ b/main.tex
@@ -52,17 +52,18 @@
     \chapter*{Prerequisites}
     \input{Sections/pre}
     
-% \chapter{Introduction}
-% \input{Sections/high/high}
-% \input{Sections/rpc/rpc}
-% \input{Sections/rpc_2/rpc_2}
-% \input{Sections/time/time}
-% \input{Sections/imp_rpc/imp.tex}
-% \chapter{Working with Distributed Systems}
-% \input{Sections/snap/snap}
+\chapter{Introduction}
+\input{Sections/high/high}
+\input{Sections/rpc/rpc}
+\input{Sections/rpc_2/rpc_2}
+\input{Sections/time/time}
+\input{Sections/imp_rpc/imp.tex}
+\chapter{Working with Distributed Systems}
+\input{Sections/snap/snap}
 \input{Sections/rep/rep}
 
 \input{Sections/raft/raft}
+\input{Sections/crash/crash.tex}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
